fixing weird main content overflow by rotating volume slider

--- a/src/app/template/components/sidenav/sidenav.component.scss
+++ b/src/app/template/components/sidenav/sidenav.component.scss
@@ -13,6 +13,7 @@ $event-panel-width: 300px;
   display: flex;
   height: 100%;
   flex-direction: column;
+  overflow: hidden
 }
 
 .sidenav {
